# peedee-eff.wow

./: .gitignore  README.md  index.html  mise.toml  package.json  vite.config.ts
sidecar/: main.py  peedee-eff-sidecar.spec  pyproject.toml
sidecar/builders/: epub_builder.py
sidecar/engines/: base.py  marker_engine.py  mock_engine.py
sidecar/tests/: test_epub_builder.py  test_mock_engine.py  test_protocol.py
sidecar/utils/: progress.py
src/: App.tsx  index.css  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  sidecar.rs
src-tauri/tests/: sidecar_test.rs
src/components/: DropZone.tsx  FileList.tsx  OptionsPanel.tsx  Preview.tsx  Settings.tsx  SetupScreen.tsx
